# Goof-Platform

./: .snyk  CFN-fargate.yml  app.js  k8s-deployment-dev.yaml  package-lock.json  package.json  pyproject.toml  vuln.js
entity/: thisisnotamanifest.json
routes/: index.js
